--- a/sass/newland/_sec_12.scss
+++ b/sass/newland/_sec_12.scss
@@ -51,7 +51,7 @@
 
     select.form-control {
         background: #454545;
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 13px;
