--- a/sass/newland/sec_methods.scss
+++ b/sass/newland/sec_methods.scss
@@ -1,5 +1,12 @@
 .sec_methods {
   h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 45px;
+
+    text-align: center;
+    text-transform: uppercase;
     color: #4F4F4F;
   }
 
