--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -1,12 +1,27 @@
 html, body {
   width: 100%;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 
 }
+
+.container {
+  max-width: 1280px !important;
+
+  .row {
+    margin: 0 !important;
+    max-width: 100% !important;
+  }
+}
+
+@media (max-width: 767.98px) {
+
+}
+
 body {
   overflow-x: hidden;
 }
+
 body {
   background-color: #FBFBFB;
   font-family: 'Montserrat';
@@ -104,9 +119,8 @@ body {
   border-color: #E5C17D;
 
   &:hover {
-    background: #548b72;
-    border-color: #548b72;
-    color: #fff;
+    background-color: #f0a744 !important;
+    color: #fff !important;
   }
 }
 
@@ -181,7 +195,6 @@ h2 {
   background-image: url("../img/slide_bg.svg");
   box-shadow: 0 0 1.5625rem rgba(0, 0, 0, 0.15);
   background-size: cover;
-  border-radius: 0.25rem;
   overflow: hidden;
   position: relative;
 
@@ -222,7 +235,6 @@ h2 {
 .card_profile {
   background: #FFFFFF;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
   text-align: center;
   padding: 51px 0 55px;
   display: -webkit-flex;
@@ -525,4 +537,248 @@ h2 {
       transform: translate(-50%, -50%);
     }
   }
+}
+
+.lSAction > a {
+  width: 1.75rem;
+  height: 1.75rem;
+  background-size: cover;
+  background-position: center !important;
+
+  &:hover svg path {
+    fill: #dbdbdb;
+  }
+
+  &.lSNext {
+    transform: rotate(180deg);
+    right: 0.625rem;
+  }
+
+  &.lSPrev {
+    left: 0.625rem;
+  }
+}
+
+.card_profile {
+  background: #FFFFFF;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  padding: 51px 0 55px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .icon {
+    display: block;
+    background-color: rgba(229, 229, 229, .5);
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 4px solid #58B58B;
+    border-radius: 50%;
+    box-sizing: border-box;
+    width: 150px;
+    min-width: 150px;
+    height: 150px;
+    margin-bottom: 28px;
+  }
+
+  h3 {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    color: #4F4F4F;
+    margin-bottom: 15px;
+  }
+
+  p {
+    color: #828282;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 150%;
+    margin: 0;
+  }
+
+  i {
+    font-style: italic;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 170%;
+    text-align: center;
+    color: #828282;
+    margin-top: 38px;
+  }
+
+  @media (max-width: 767.98px) {
+    position: relative;
+    text-align: left;
+    align-items: flex-start;
+    border-radius: 8px;
+    padding: 15px;
+
+    .icon {
+      position: absolute;
+      width: 90px;
+      min-width: 90px;
+      height: 90px;
+      border-width: 3px;
+    }
+
+    h3 {
+      height: 90px;
+      display: flex;
+      align-items: center;
+      margin-left: 120px;
+      max-width: 170px;
+    }
+  }
+}
+
+.card_product {
+  background: #FFFFFF;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+
+  .card_body {
+    padding: 20px 17px 15px;
+  }
+
+  img {
+    width: 100%;
+    border-radius: 8px;
+  }
+
+  h4 {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    margin-bottom: 13px;
+  }
+
+  .date {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 153.59%;
+    color: #828282;
+  }
+
+  .hr {
+    display: block;
+    height: 1px;
+    border-top: 1px solid #D6D6D6;
+    margin-top: 16px;
+    margin-bottom: 19px;
+  }
+
+  .tags {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 130%;
+    color: #A2A2A2;
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  .btn.btn-blue {
+    width: 167px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  body {
+    padding-top: 40px;
+  }
+
+  .h1,
+  .h2,
+  h1,
+  h2 {
+    font-size: 24px;
+  }
+
+  br {
+    display: none;
+  }
+}
+
+.card {
+  background: #FFFFFF;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  border: none;
+}
+
+.lSSlideOuter {
+  display: flex;
+  flex-direction: column;
+
+  .lSPager.lSpg > li a {
+    background: #FFFFFF;
+    border: 2px solid #A2A2A2;
+    width: 20px;
+    height: 20px;
+    box-sizing: content-box;
+    position: relative;
+  }
+
+  .lSPager.lSpg > li.active a,
+  .lSPager.lSpg > li:hover a {
+    background-color: #FFFFFF;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      background: #099E18;
+      border: 1px solid #828282;
+      box-sizing: border-box;
+      border-radius: 50%;
+    }
+  }
+
+  .lSPager.lSpg > li:hover a {
+    &::after {
+      opacity: 0.3;
+    }
+  }
+}
+
+.sleder_wrapp {
+  position: relative;
+}
+
+.arrow-next,
+.arrow-prev {
+  position: absolute;
+  top: 50%;
+  display: block;
+  cursor: pointer;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  svg {
+    width: 25px;
+    height: 47px;
+  }
+}
+
+.arrow-prev {
+  left: -50px;
+  transform: translateY(-50%);
+  display: block;
+}
+
+.arrow-next {
+  right: -50px;
+  transform: translateY(-50%) rotateY(180deg);
 }
