--- a/sass/newland/_footer.scss
+++ b/sass/newland/_footer.scss
@@ -19,10 +19,17 @@ footer {
 
         a,
         span {
+            font-family: Montserrat;
+            font-style: normal;
             font-weight: normal;
-            font-size: 12px;
-            line-height: 170%;
-            color: #BDBDBD;
+            font-size: 18px;
+            line-height: 140%;
+            /* or 25px */
+
+
+            /* Подсказка в поле */
+
+            color: #A2A2A2;
         }
 
         a {
