--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -99,14 +99,16 @@
 }
 
 .nav-link {
+  padding: 1.2rem 1.5rem;
+  font-style: normal;
   font-weight: 600;
   font-size: 14px;
-  line-height: 120%;
-  padding: 1rem;
+  line-height: 12px;
+  color: #FCFCFC;
 
   &:focus,
   &:hover {
-    background-color: rgba(80, 155, 121, .5);
+    background-color: rgba(229, 193, 124, .5);
   }
 }
 
