--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -266,7 +266,7 @@
         }
 
         & > span {
-            font-family: Montserrat;
+            font-family: Montserrat, sans-serif;
             font-style: normal;
             font-weight: 500;
             font-size: 12px;
