--- a/sass/newland/sec_duplicated.scss
+++ b/sass/newland/sec_duplicated.scss
@@ -6,11 +6,13 @@
   background-position-y: -55%;
   padding: 60px 0 100px 0;
 
-  .container {
-    max-width: 1300px;
-  }
 
   .block-grid {
+    .duplicated-header {
+      padding: 0;
+
+    }
+
     .block-grid_item {
       display: flex;
       align-items: center;
@@ -20,6 +22,8 @@
       -moz-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
       box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
       padding: 20px 50px;
+      min-width: 48%;
+      max-width: 48%;
 
       img {
         position: absolute;
@@ -29,38 +33,29 @@
         padding-left: 100px;
         display: inline-block;
         margin: 0;
-        font-family: Montserrat;
         font-style: normal;
         font-weight: 500;
         font-size: 18px;
         line-height: 150%;
         color: #828282;
+
       }
 
-      &:nth-child(odd) {
-        margin-right: 50px;
-      }
 
-      &:nth-child(even) {
-        margin-left: 50px;
-      }
     }
   }
 
   h2 {
-    font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
-    line-height: 140%;
-    /* or 45px */
+    line-height: 45px;
     text-align: center;
     text-transform: uppercase;
     color: #4F4F4F;
   }
 
   h3 {
-    font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
@@ -73,13 +68,23 @@
 @media screen and (max-width: 767px) {
   .sec_duplicated {
     .block-grid {
+      .duplicated-header {
+        padding: 0;
+        margin: 0 30px;
+
+
+        &:nth-child(even) {
+          display: none;
+        }
+      }
       .block-grid_item {
         height: 240px;
         padding: 20px 15px 35px 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        min-width: unset;
+        max-width: unset;
         img {
           width: 50px;
           height: 50px;
