--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -6,10 +6,10 @@ html, body {
 }
 
 .container {
-  max-width: 1280px !important;
+  max-width: 1100px !important;
 
   .row {
-    margin: 0 !important;
+    margin: 0 ;
     max-width: 100% !important;
   }
 }
