--- a/sass/newland/sec_methods.scss
+++ b/sass/newland/sec_methods.scss
@@ -1,10 +1,15 @@
 .sec_methods {
+  .container {
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+  }
+
   h2 {
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
     line-height: 45px;
-
+    padding-bottom: 3rem;
     text-align: center;
     text-transform: uppercase;
     color: #4F4F4F;
@@ -19,6 +24,20 @@
 
       }
 
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .sec_methods {
+    .container {
+      padding: 0;
+    }
+
+    h2 {
+      font-size: 20px;
+      line-height: 25px;
+      padding-bottom: 10px;
     }
   }
 }
