--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -20,6 +20,18 @@
 			margin-bottom: 30px;
 		}
 	}
+	.img_wrapp {
+			position: relative;
+			width: 100%;
+			height: 100%;
+
+			img {
+					position: relative;
+					bottom: 0;
+					width: 530px;
+					filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
+			}
+		}
 
 	.btn-blue {
 		color: #fff;
