--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -35,9 +35,9 @@
 
         img {
             position: absolute;
-            bottom: 0;
-            right: -40px;
-            width: 530px;
+            bottom: -800px;
+            right: -30px;
+            width: 515px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
