--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -145,6 +145,7 @@
             img {
                 width: 100%;
                 right: initial;
+                bottom: -470px;
                 left: 50%;
                 transform: translateX(-50%);
                 max-width: 345px;
