--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -31,7 +31,7 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-
+    color: #828282;
     text-transform: uppercase;
   }
 
@@ -40,7 +40,8 @@
     font-weight: 600;
     font-size: 38px;
     line-height: 53px;
-
+    color: #4F4F4F;
+    margin-bottom: 44px;
     text-transform: uppercase;
   }
 
@@ -210,6 +211,8 @@
   .sec_reason {
     .drop-link-text {
       padding: 0 2%;
+      font-size: 16px;
+      line-height: 22px;
     }
 
     .sec-header {
@@ -222,6 +225,7 @@
       padding: 0 0 0 20px;
       min-width: unset;
       max-width: unset;
+
       p {
         font-size: 14px;
       }
@@ -229,9 +233,6 @@
 
     }
 
-    .drop-link-text {
-      font-size: 16px;
-    }
   }
   .sec_profile {
     padding: 23px 0 0;
