--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -9,7 +9,7 @@ html, body {
   max-width: 1100px !important;
 
   .row {
-    margin: 0 ;
+    margin: 0;
     max-width: 100% !important;
   }
 }
@@ -563,11 +563,11 @@ h2 {
   background: #FFFFFF;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   text-align: center;
-  padding: 51px 0 55px;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+
   align-items: center;
 
   .icon {
