--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -224,11 +224,11 @@ h2 {
 
   &.lSNext {
     transform: rotate(180deg);
-    right: 0.625rem;
+    right: -40px;
   }
 
   &.lSPrev {
-    left: 0.625rem;
+    left: -40px;
   }
 }
 
@@ -538,8 +538,11 @@ h2 {
     }
   }
 }
-
+.lSSlideWrapper {
+  overflow: visible;
+}
 .lSAction > a {
+
   width: 2.75rem;
   height: 2.75rem;
   background-size: cover;
@@ -551,14 +554,26 @@ h2 {
 
   &.lSNext {
     transform: rotate(180deg);
-    right: -0.05rem;
+    right: -40px;
   }
 
   &.lSPrev {
-    left: -0.05rem;
+    left: -40px;
   }
 }
 
+@media (max-width: 1000px) {
+  .lSAction > a {
+
+    &.lSNext {
+      right: 10px;
+    }
+
+    &.lSPrev {
+      left: 10px;
+    }
+  }
+}
 .card_profile {
   background: #FFFFFF;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
