--- a/sass/newland/sec_methods.scss
+++ b/sass/newland/sec_methods.scss
@@ -16,6 +16,7 @@
   }
 
   .card_profile {
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     .icon-box {
       display: flex;
       align-items: center;
