--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -36,6 +36,7 @@
             position: absolute;
             bottom: 0;
             left: 0;
+            width:410px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
     }
@@ -76,7 +77,7 @@
             height: 360px;
 
             img {
-                max-width: 400px;
+                max-width: 300px;
             }
         }
 
