--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -89,7 +89,7 @@
 .navbar-brand {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
+    background: #3A966C;
     padding: 3px 17px 5px 12px;
 }
 
