--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -66,6 +66,7 @@
 
         .media-image {
             max-width: 100%;
+            width: 150px;
         }
 
         .media.vertical {
@@ -182,7 +183,7 @@
 
         .b-card-body {
             margin: 15px 0;
-            min-height: 100px;
+            min-height: 40px;
         }
 
         .b-card-footer {
