--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -32,3 +32,11 @@
 @import "newland/footer";
 
 @import "lms_booster/sec_practics";
+@import "lms_booster/sec_get-out-pit";
+@import "lms_booster/sec_what_results";
+@import "lms_booster/sec_fear";
+@import "lms_booster/sec_you_can";
+@import "lms_booster/sec_you_get_everything";
+@import "lms_booster/sec_about_author"; 
+@import "lms_booster/sec_video_author"; 
+@import "lms_booster/sec_video_review"; 
