--- a/sass/newland/_sec_lesson_steps.scss
+++ b/sass/newland/_sec_lesson_steps.scss
@@ -62,7 +62,7 @@
 
 .lSSlideOuter {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 
     .lSPager.lSpg > li a {
         background: #FFFFFF;
