--- a/sass/lms_booster/_sec_practics.scss
+++ b/sass/lms_booster/_sec_practics.scss
@@ -1,5 +1,10 @@
 .sec_practics {
     padding: 57px 0 55px;
+    background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F4F4F4;
+
+    .sec_title h2 {
+        margin-bottom: 63px;
+    }
 }
 
 .media_wrapp {
@@ -7,13 +12,13 @@
         background: #FFFFFF;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         border-radius: 8px;
-        padding: 16px 28px 16px 24px;
+        padding: 22px 30px 22px 24px;
         min-height: 96px;
         display: -webkit-flex;
         display: -ms-flex;
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
+        height: 100%;
         transition: all .2s;
 
         .icon {
@@ -25,7 +30,7 @@
             width: 50px;
             min-width: 50px;
             height: 50px;
-            margin-right: 28px;
+            margin-right: 35px;
         }
 
         p {
@@ -34,6 +39,19 @@
             line-height: 150%;
             color: #828282;
             margin: 0;
+
+            b {
+                font-weight: 600;
+            }
         }
+
+        &:hover {
+            transform: scale(1.02) translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+        }
+    }
+
+    .col-md-6 {
+        margin-bottom: 40px;
     }
 }
