--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -23,6 +23,25 @@ body {
     }
 }
 
+// background-colors
+.bg-orange {
+    background: #fbf3e9 !important;
+}
+
+.bg-green {
+    background: #ebf5f0 !important;
+}
+
+.bg-blue {
+    background: #557FAF !important;
+}
+
+// text-colors
+
+.text-orange {
+    color: #F0A744 !important;
+}
+
 // abcolute icons
 
 .abs_pic {
@@ -540,5 +559,36 @@ h2 {
 
     &:hover {
         border-color: #58B58B;
+    }
+}
+
+.custom-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 130%;
+        display: flex;
+        align-items: flex-start;
+        color: #828282;
+
+        &:not(:last-of-type) {
+            margin-bottom: 11px;
+        }
+
+        img {
+            width: 18px;
+            height: auto;
+            display: inline-block;
+            margin-top: 3px;
+            margin-right: 17px;
+        }
+
+        b {
+            font-size: 20px;
+        }
     }
 }
