ready PC landing

--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -40,3 +40,12 @@
 @import "lms_booster/sec_about_author"; 
 @import "lms_booster/sec_video_author"; 
 @import "lms_booster/sec_video_review"; 
+@import "lms_booster/sec_guarantee"; 
+@import "lms_booster/sec_you_will_get"; 
+@import "lms_booster/sec_best_students"; 
+@import "lms_booster/sec_prizes"; 
+@import "lms_booster/sec_author_history"; 
+@import "lms_booster/sec_change_life"; 
+@import "lms_booster/sec_what_will_be"; 
+@import "lms_booster/sec_start_your_way"; 
+@import "lms_booster/sec_faq"; 
