--- a/sass/lms_booster/_sec_practics.scss
+++ b/sass/lms_booster/_sec_practics.scss
@@ -8,6 +8,19 @@
 }
 
 .media_wrapp {
+    .dubl_line_vertical{
+      right: -100px;
+      top: 42%;
+      transform: rotate(90deg);
+    }
+    .circle{
+      left: -70px;
+      top: 34%;
+    }
+    .circle2{
+      right: 10px;
+      top: 95%;
+    }
     .media {
         background: #FFFFFF;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
