big img landing

--- a/sass/lms_booster/_sec_about_author.scss
+++ b/sass/lms_booster/_sec_about_author.scss
@@ -1,6 +1,14 @@
 .sec_about_author {
     padding-top: 64px;
-
+    .circle{
+      width: 50px;
+      left: 552px;
+      top: 77%;
+    }
+    .dubl_line{
+      right: -5px;
+      top: 31%;
+    }
     .sec_title p {
         font-style: normal;
         font-weight: 500;
