--- a/sass/lms_booster/_sec_practics.scss
+++ b/sass/lms_booster/_sec_practics.scss
@@ -14,12 +14,14 @@
       transform: rotate(90deg);
     }
     .circle{
-      left: -70px;
+      width: 22px;
+      left: -52px;
       top: 34%;
     }
     .circle2{
-      right: 10px;
-      top: 95%;
+      width: 22px;
+      right: 12px;
+      top: 96%;
     }
     .media {
         background: #FFFFFF;
