--- a/sass/lms_booster/_sec_change_life.scss
+++ b/sass/lms_booster/_sec_change_life.scss
@@ -1,6 +1,17 @@
 .sec_change_life {
     padding: 74px 0 87px;
 
+    .circle{
+      width: 50px;
+      left: auto;
+      right: -40px;
+      top: 85%;
+    }
+    .dubl_line_vertical{
+      left: 50px;
+      top: 88%;
+    }
+
     .sec_title {
         h2 {
             margin: 33px 0 31px;
