--- a/sass/lms_booster/_sec_faq.scss
+++ b/sass/lms_booster/_sec_faq.scss
@@ -1,6 +1,17 @@
 .sec_faq {
     padding: 84px 0 140px;
 
+    .circle{
+      width: 50px;
+      right: -30px;
+      top: 56%;
+    }
+    .dubl_line_vertical{
+      left: -50px;
+      top: 75%;
+      transform: rotate(-90deg);
+    }
+
     .sec_title h2 {
         font-style: normal;
         font-weight: bold;
@@ -10,4 +21,4 @@
         margin: 0;
         margin-bottom: 72px;
     }
-} 
+}
