--- a/sass/lms_booster/_sec_fear.scss
+++ b/sass/lms_booster/_sec_fear.scss
@@ -1,7 +1,11 @@
 .sec_fear {
     position: relative;
     padding: 76px 0 126px;
-
+    .circle{
+      width: 50px;
+      top: 78%;
+      right:520px;
+    }
     .img_wrapp {
         position: relative;
         height: 100%;
