--- a/sass/lms_booster/_sec_prizes.scss
+++ b/sass/lms_booster/_sec_prizes.scss
@@ -1,6 +1,21 @@
 .sec_prizes {
     padding: 93px 0 112px;
 
+    .circle{
+      width: 50px;
+      left: 950px;
+      top: 71%;
+    }
+    .dubl_line{
+      right: -50px;
+      top: 17%;
+    }
+    .dubl_line_vertical{
+      left: 100px;
+      top: 78%;
+      transform: rotate(-90deg);
+    }
+
     .sec_title {
         h2 {
             margin: 33px 0 40px;
