--- a/sass/lms_booster/_sec_start_your_way.scss
+++ b/sass/lms_booster/_sec_start_your_way.scss
@@ -1,6 +1,22 @@
 .sec_start_your_way {
     padding: 82px 0 120px;
 
+    .circle{
+      width: 50px;
+      right: -100px;
+      top: -3%;
+    }
+    .dubl_line{
+      right: 160px;
+      top: 103%;
+      transform: rotate(180deg);
+    }
+    .dubl_line_vertical{
+      left: -10px;
+      top: 40%;
+      transform: rotate(90deg);
+    }
+
     .sec_title {
         h2 {
             margin: 33px 0 64px;
