--- a/sass/lms_booster/_sec_what_will_be.scss
+++ b/sass/lms_booster/_sec_what_will_be.scss
@@ -1,6 +1,16 @@
 .sec_what_will_be {
     padding: 92px 0 95px;
 
+    .circle{
+      width: 50px;
+      left: -5px;
+      top: 95%;
+    }
+    .dubl_line_vertical{
+      right: -90px;
+      top: 40%;
+    }
+
     .sec_title {
         h2 {
             margin: 33px 0 71px;
