--- a/sass/lms_booster/_sec_you_can.scss
+++ b/sass/lms_booster/_sec_you_can.scss
@@ -1,6 +1,15 @@
 .sec_you_can {
     padding: 105px 0 76px;
-
+    .dubl_line_vertical{
+      right: -90px;
+      top: 42%;
+      transform: rotate(-90deg);
+    }
+    .circle{
+      width: 50px;
+      left: -70px;
+      top: 56%;
+    }
     .sec_title h2 {
         margin-bottom: 58px;
     }
