--- a/sass/lms_booster/_sec_you_will_get.scss
+++ b/sass/lms_booster/_sec_you_will_get.scss
@@ -1,6 +1,18 @@
 .sec_you_will_get {
     padding: 54px 0 62px;
 
+    .dubl_line_vertical{
+      left: -100px;
+      top: 76%;
+      transform: rotate(-90deg);
+
+    }
+    .dubl_line_vertical2{
+      right: -100px;
+      top: 42%;
+      transform: rotate(-90deg);
+    }
+
     .sec_title h2 {
         margin-bottom: 49px;
     }
