ready third landing

--- a/sass/lidmagnit.scss
+++ b/sass/lidmagnit.scss
@@ -3,7 +3,9 @@
 // ==============================================================
 @import "lidmagnit/sec_product";
 @import "lidmagnit/sec_practics";
-// @import "vebinar/sec_form_master_class";
+@import "lidmagnit/sec_what_results";
+@import "lidmagnit/sec_checklist";
+@import "vebinar/sec_form_master_class";
 // ==============================================================
 // COMMON
 // ==============================================================
