--- a/sass/lms_booster/_sec_video_review.scss
+++ b/sass/lms_booster/_sec_video_review.scss
@@ -35,3 +35,16 @@
         padding: 0;
     }
 }
+
+.sec_video_review_1{
+    .circle{
+      width: 50px;
+      left: -105px;
+      top: 75px;
+    }
+    .dubl_line_vertical{
+      right: -81px;
+      top: 582px;
+      transform: rotate(-90deg);
+    }
+}
