--- a/sass/lms_booster/_sec_what_will_be.scss
+++ b/sass/lms_booster/_sec_what_will_be.scss
@@ -17,3 +17,15 @@
         }
     }
 }
+.sec_what_will_be_1{
+  .circle2{
+    width: 50px;
+    right: 5px;
+    top: 1px;
+  }
+  .dubl_line_vertical{
+    left: 72px;
+    top: 531px;
+    transform: rotate(-90deg);
+  }
+}
