--- a/sass/lms_booster/_sec_what_results.scss
+++ b/sass/lms_booster/_sec_what_results.scss
@@ -14,3 +14,20 @@
         margin-bottom: 66px;
     }
 }
+.sec_what_results_1{
+      .dubl_line_vertical2{
+        left: -83px;
+        top: 370px;
+        transform: rotate(-90deg);
+      }
+      .circle{
+        width: 50px;
+        right: 0px;
+        top: 0px;
+      }
+      .dubl_line{
+        right: 90px;
+        top: 98%;
+        transform: rotate(180deg);
+      }
+}
