--- a/sass/vebinar/_sec_product.scss
+++ b/sass/vebinar/_sec_product.scss
@@ -2,6 +2,24 @@
     background-image: none;
     padding-top: 66px;
 
+    .circle{
+      width: 50px;
+      left: initial;
+      right: 408px;
+      top: 372px;
+    }
+    .dubl_line_vertical{
+      right: 15px;
+      top: 343px;
+      transform: rotate(90deg);
+    }
+    .circle_orange{
+      right: 10px;
+      top: 709px;
+      left: initial;
+    }
+
+
     .upper-title {
         font-style: normal;
         font-weight: bold;
