--- a/sass/lidmagnit.scss
+++ b/sass/lidmagnit.scss
@@ -12,3 +12,6 @@
 .media_wrapp .media .icon {
     background-image: url('../img/icons/ok-yellow.svg');
 }
+// ==============================================================
+// absolute pictures
+// ==============================================================
