lidmagnit abs landing

--- a/sass/lidmagnit.scss
+++ b/sass/lidmagnit.scss
@@ -15,3 +15,139 @@
 // ==============================================================
 // absolute pictures
 // ==============================================================
+.sec_product{
+
+    .circle{
+      width: 22px;
+      left: 173px;
+      top: 440px;
+    }
+    .circle2{
+      width: 50px;
+      right: 385px;
+      top: 154px;
+    }
+    .circle_orange{
+      width: 29px;
+      right: 470px;
+      top: 486px;
+      left: initial;
+    }
+    .dubl_line_vertical{
+      right: -70px;
+      top: 8%;
+    }
+}
+
+.sec_practics{
+
+    .circle{
+      width: 50px;
+      left: -15px;
+      top: 543px;
+    }
+    .dubl_line{
+      right: 20px;
+      top: 560px;
+      transform: rotate(180deg);
+    }
+
+}
+
+.sec_what_results{
+
+    .circle{
+      width: 50px;
+      left: 65px;
+      top: 197px;
+    }
+    .dubl_line{
+      left: 295px;
+      top: 648px;
+      transform: rotate(180deg);
+    }
+
+}
+.sec_checklist{
+
+    .circle{
+      width: 50px;
+      left: 505px;
+      top: 284px;
+    }
+}
+.sec_what_results_2{
+
+    .circle{
+      width: 50px;
+      right: 105px;
+      top: 288px;
+      left: initial;
+    }
+    .dubl_line_vertical{
+      left: -90px;
+      top: 195px;
+      transform: rotate(-90deg);
+    }
+
+}
+.sec_checklist_2{
+
+    .circle{
+      width: 50px;
+      left: 600px;
+      top: 306px;
+    }
+}
+.sec_what_results_3{
+
+    .circle{
+      width: 50px;
+      left: 10px;
+      top: 280px;
+      right: initial;
+    }
+    .dubl_line_vertical{
+      right: 0px;
+      top: 260px;
+      transform: rotate(-90deg);
+      left: initial;
+    }
+}
+.sec_checklist_3{
+
+    .circle{
+      width: 50px;
+      left: 509px;
+      top: 340px;
+    }
+}
+.sec_video_review{
+
+    .circle{
+      width: 50px;
+      right: -101px;
+      top: 195px;
+      left: initial;
+    }
+    .dubl_line_vertical{
+      left: -113px;
+      top: 550px;
+      transform: rotate(-90deg);
+    }
+}
+.sec_form_master_class{
+
+    .circle{
+      width: 50px;
+      left: -70px;
+      top: 80px;
+    }
+    .dubl_line_vertical{
+      right: -113px;
+      top: 560px;
+      transform: rotate(-90deg);
+      left: initial;
+    }
+
+}
