--- a/sass/lidmagnit.scss
+++ b/sass/lidmagnit.scss
@@ -71,6 +71,7 @@
 .sec_checklist{
 
     .circle{
+      opacity: 0.1;
       width: 50px;
       left: 505px;
       top: 284px;
@@ -94,6 +95,7 @@
 .sec_checklist_2{
 
     .circle{
+      opacity: 0.1;
       width: 50px;
       left: 600px;
       top: 306px;
@@ -117,6 +119,7 @@
 .sec_checklist_3{
 
     .circle{
+      opacity: 0.1;
       width: 50px;
       left: 509px;
       top: 340px;
@@ -139,6 +142,7 @@
 .sec_form_master_class{
 
     .circle{
+      opacity: 0.1;
       width: 50px;
       left: -70px;
       top: 80px;
