--- a/sass/main/_header.scss
+++ b/sass/main/_header.scss
@@ -89,7 +89,7 @@
 .navbar-brand {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
+    background: #3A966C;
     padding: 4px 18px 4px 10px;
 }
 
